python/testData/highlighting/continueInFinallyBlockBefore38.py
while True:
  try:
    print("a")
  finally:
    <error descr="Python version 3.7 does not support 'continue' inside 'finally' clause">continue</error>